--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2471,7 +2471,7 @@
 
 		.image.leftbigger, .image.rightbigger {
 			width: 60%;
-			max-width: 150rem;
+			max-width: 250rem;
 		}
 
 			.image.leftbigger img, .image.rightbigger img {
@@ -2482,19 +2482,19 @@
 
 		.image.left {
 			float: left;
-			margin: 0 1.5rem 1rem 0;
+			margin: 0 0 0 0;
 			top: 0.25rem;
 		}
 
 		.image.right {
 			float: right;
-			margin: 0 0 1rem 1.5rem;
+			margin: 0 0 0 0;
 			top: 0.25rem;
 		}
 
 		.image.fit {
 			display: block;
-			margin: 0 0 2rem 0;
+			margin: 0 0 0 0;
 			width: 100%;
 		}
 
